--- a/app_server/views/anasayfa.pug
+++ b/app_server/views/anasayfa.pug
@@ -1,84 +1,32 @@
 extends layout 
+include fonksiyonlar/yildiz
 
 block content 
     #banner.page-header 
         .row 
             .col-lg-6 
                 h1
-                    | MekanBul 
-                    small &nbsp; Civardaki mekanları kesfet!
-    .row 
-        .row-list-group 
-        .col-xs-12.col-sm-12
-            .col-xs-12.list-group-item
-                h4 
-                    a(href='/mekan') Bilgisayar Müh 
-                    small &nbsp;
-                    span.glyphicon.glyphicon-star 
-                    span.glyphicon.glyphicon-star 
-                    span.glyphicon.glyphicon-star 
-                    span.glyphicon.glyphicon-star
-                    span.glyphicon.glyphicon-star-empty
+                    | #{sayfaBaslik.siteAd}
+                    small &nbsp; #{sayfaBaslik.slogan}
+    .row
+        each mekan in mekanlar
+      
+            .row-list-group 
+            .col-xs-12.col-sm-12
+                .col-xs-12.list-group-item
+                    h4 
+                        a(href='/mekan') #{mekan.ad}
+                        small &nbsp;
+                        +puanOlustur(mekan.puan)
+                       
+                        
                     
                     
 
-                span.badge.pull-right.badge-default 1 km
-                p.adress Centrum Garden AVM
-                p 
-                    span.label.label-warning Dünya Kahveleri
-                    | &nbsp;
-                    span.label.label-warning Kekler
-                    | &nbsp;
-                    span.label.label-warning Pastalar 
-                    | &nbsp;
-            | &nbsp;
-    .row 
-        .row-list-group 
-        .col-xs-12.col-sm-12
-            .col-xs-12.list-group-item
-                h4 
-                    a(href='/mekan') Taş Cafe 
-                    small &nbsp;
-                    span.glyphicon.glyphicon-star 
-                    span.glyphicon.glyphicon-star 
-                    span.glyphicon.glyphicon-star 
-                    span.glyphicon.glyphicon-star-empty
-                    span.glyphicon.glyphicon-star-empty
-                    
-                    
-
-                span.badge.pull-right.badge-default 8 km
-                p.adress SDÜ Batı Kampüs
-                p 
-                    span.label.label-warning Dünya Kahveleri
-                    | &nbsp;
-                    span.label.label-warning Kekler
-                    | &nbsp;
-                    span.label.label-warning Pastalar 
-                    | &nbsp;
-            | &nbsp;
-    .row 
-        .row-list-group 
-        .col-xs-12.col-sm-12
-            .col-xs-12.list-group-item
-                h4 
-                    a(href='/mekan') Arabica
-                    small &nbsp;
-                    span.glyphicon.glyphicon-star 
-                    span.glyphicon.glyphicon-star 
-                    span.glyphicon.glyphicon-star-empty
-                    span.glyphicon.glyphicon-star-empty
-                    span.glyphicon.glyphicon-star-empty
-
-                    
-                    
-
-                span.badge.pull-right.badge-default 10 km
-                p.adress İyaş AVM
-                p 
-                    span.label.label-warning Dünya Kahveleri
-                    | &nbsp;
-                    span.label.label-warning Kekler
-                    | &nbsp;
-                    span.label.label-warning Pastalar 
-                    | &nbsp;
+                    span.badge.pull-right.badge-default #{mekan.mesafe}
+                    p.address #{mekan.adres}
+                    p 
+                        each imkan in mekan.imkanlar
+                            span.label.label-warning #{imkan}
+                            |   &nbsp;
+                |&nbsp;
