--- a/app_server/views/mekanbilgisi.pug
+++ b/app_server/views/mekanbilgisi.pug
@@ -1,5 +1,6 @@
 extends layout 
 include fonksiyonlar/yildiz
+include fonksiyonlar/tarihformat
 
 
 block content 
@@ -41,8 +42,8 @@ block content
                             .panel-heading
                                 h2.panel-title Konum Bilgisi 
                             .panel-body 
-                                -var enlem =mekanDetay.koordinatlar.enlem
-                                -var boylam=mekanDetay.koordinatlar.boylam
+                                -var enlem =mekanDetay.koordinat.enlem
+                                -var boylam=mekanDetay.koordinat.boylam
                                 img.img-responsive.img-rounded(src='http://maps.googleapis.com/maps/api/staticmap?center='+enlem+','+boylam+'&zoom=12&size=600x400&markers='+enlem+','+boylam+'&key=AIzaSyCmmKygTpBzHGOZEciJpAdxC9v_tWHagnE')
     .row
         .col-xs-12
@@ -57,8 +58,10 @@ block content
                                 .well.well-sm.review-header 
                                     span.rating
                                         +puanOlustur(yorum.puan)
+                                    span.review-author= yorum.yorumYapan
                                     span.review-author=yorum.yorumYapan
                                     small.reviewTimestamp &nbsp; #{yorum.tarih}
+                                    +tarihFormatla(yorum.tarih)
                                 .col-xs-12 
                                     p=yorum.yorumMetni
 
