--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -23,7 +23,8 @@ html
   block content 
   footer 
     .col-12 
-      small &copy : Seyda Aydin 2022
+      small &copy; Seyda Aydin 2022
 
-script (src='/javascript/jquery-3.6.1.min.js')    
-script (src='/bootstrap/js/bootstrap.min.js')  
+script(src='/javascripts/jquery-3.6.1.min.js')   
+script(src='/bootstrap/js/bootstrap.min.js') 
+script(src='/javascripts/denetle.js')    
