--- a/app_server/views/mekanbilgisi.pug
+++ b/app_server/views/mekanbilgisi.pug
@@ -49,7 +49,8 @@ block content
         .col-xs-12
             .panel.panel-primary 
                 .panel-heading 
-                    a.btn.btn-default.pull-right(href='/mekan/yorum/yeni') Yorum Ekle 
+                    -var mekanid=mekanDetay._id
+                    a.btn.btn-default.pull-right(href='/mekan/'+mekanid+'/yorum/yeni') Yorum Ekle
                     h2.panel-title Müşteri Yorumları
                 .panel-body.review-container 
                     each yorum in mekanDetay.yorumlar
@@ -58,9 +59,8 @@ block content
                                 .well.well-sm.review-header 
                                     span.rating
                                         +puanOlustur(yorum.puan)
-                                    span.review-author= yorum.yorumYapan
-                                    span.review-author=yorum.yorumYapan
-                                    small.reviewTimestamp &nbsp; #{yorum.tarih}
+                                    span.review-author &nbsp; #{yorum.yorumYapan}
+                                    small.reviewTimestamp &nbsp; 
                                     +tarihFormatla(yorum.tarih)
                                 .col-xs-12 
                                     p=yorum.yorumMetni
